<resources>
    <string name="app_name">NYTimesSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hint">Enter search query</string>
    <string name="submit">Submit</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="NewsDeskHint">Enter in a News Desk Term</string>
    <string name="NameHint">Enter in a Name Term </string>
    <string name="MaterialHint">Enter in a Material Type</string>
    <string name="clear">Clear</string>
    <string name="ok">Ok</string>
    <string name="sort_prompt">Sort Order</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sortHint">Sort order:</string>
    <string name="selectdate">Select Date</string>
</resources>
