<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/snSort"
        android:layout_width="wrap_content"
        android:entries="@array/sort_array"
        android:prompt="@string/sort_prompt"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/tvSelectDate"
        android:layout_toStartOf="@+id/tvSelectDate"
        android:layout_toRightOf="@+id/tvSortHint"
        android:layout_toEndOf="@+id/tvSortHint"
        android:paddingTop="3dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/btnClear"
        android:layout_below="@+id/snSection"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:id="@+id/btnOk"
        android:layout_below="@+id/snSection"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <earroyof.nytimessearch.MultiSpinner
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/snNews"
        android:layout_below="@id/snSort"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <earroyof.nytimessearch.MultiSpinner
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/snMaterial"
        android:layout_below="@id/snNews"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <earroyof.nytimessearch.MultiSpinner
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/snSection"
        android:layout_below="@id/snMaterial"
        android:layout_alignRight="@+id/snMaterial"
        android:layout_alignEnd="@+id/snMaterial"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sortHint"
        android:id="@+id/tvSortHint"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/snNews"
        android:layout_alignRight="@+id/btnClear"
        android:layout_alignEnd="@+id/btnClear"
        android:textSize="16sp"
        android:paddingLeft="8dp"
        android:textColor="#000000"
        android:textIsSelectable="true"
        android:paddingTop="3dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/selectdate"
        android:id="@+id/tvSelectDate"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/snNews"
        android:textSize="16sp"
        android:paddingRight="7dp"
        android:paddingTop="3dp" />

</RelativeLayout>